# pytracer

./: .flake8  .gitignore  .pre-commit-config.yaml  .pyre_configuration  LICENSE.txt  Makefile  README.md  pyproject.toml  run-mypy
.github/workflows/: python-app.yml
examples/: canvas_to_ppm.py  clock_face.py  pattern.py  plot_projectile_trajectory.py  scene.yaml  scene_reflection.yaml  sphere_3d.py  sphere_3d_multiprocessing.py  sphere_in_glass.yaml  sphere_shadow.py  transparency.yaml  world_and_camera.py
pytracer/: __init__.py  camera.py  canvas.py  cli.py  color.py  image.py  light.py  materials.py  matrix.py  patterns.py  primitives.py  ray.py  render.py  serialization.py  shapes.py  sphere.py  utils.py  world.py
tests/: conftest.py  test_camera.py  test_canvas.py  test_colors.py  test_deserialization.py  test_examples.py  test_image.py  test_material.py  test_matrix.py  test_patterns.py  test_plane.py  test_primitives.py  test_ray.py  test_ray_transforms.py  test_sphere.py  test_transforms.py  test_world.py  utils.py
