[tool.poetry]
name = "pytracer"
version = "0.1.0"
description = "The Ray Tracer Challenge, implemented in Python"
authors = ["Chris Lawlor <238952+chrislawlor@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.207"
mypy = "^0.991"
black = "^22.12.0"
ipython = "^8.7.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
isort = "^5.11.4"
ipdb = "^0.13.11"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
