[tool.poetry]
name = "pytracer"
version = "0.1.0"
description = "The Ray Tracer Challenge, implemented in Python"
authors = ["Chris Lawlor <238952+chrislawlor@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
pytracer = "pytracer.cli:cli"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"
flake8 = "^6.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^22.12.0"
ipython = "^8.7.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
isort = "^5.11.4"
ipdb = "^0.13.11"
types-pyyaml = "^6.0.12.2"


[tool.poetry.group.extras.dependencies]
rich = "^13.0.1"

[tool.poetry.extras]
cli = ["rich"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
